--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,16 @@
 @tailwind utilities;
 
 body {
+    max-width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+/* Additonal custom styles */
+.max-width {
+    @apply max-w-[1280px] mx-auto p-4;
 }
 
 .font-ador {
