--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 /* Additonal custom styles */
 .max-width {
-    @apply max-w-[1280px] mx-auto p-4;
+    @apply max-w-[1280px] mx-auto px-4;
 }
 
 .font-ador {
