--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("./fonts/fonts.css");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +9,7 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    font-family: "Noto Serif Bengali", serif;
     font-optical-sizing: auto;
     font-style: normal;
 }
