--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url("./fonts/fonts.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&family=Poppins:wght@400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -21,6 +22,10 @@ body {
 
 .font-ador {
   font-family: "ador", serif;
+}
+
+.font-poppins {
+   font-family: "Poppins", sans-serif;
 }
 
 
